fix shifting

--- a/open-source-election-game/src/App.css
+++ b/open-source-election-game/src/App.css
@@ -44,4 +44,5 @@
 .App {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
